--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <title>عيد مبارك</title>
+    <title>رمضان مبارك</title>
     <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
@@ -78,14 +78,14 @@
     <form>
         <div class="imgcontainer">
             <p style="text-align:center;">
-                <img src="logo white.png" alt="Avatar" class="avatar" width="374" height="276" class="responsive">
+                <img src="hhrlogo.png" alt="Avatar" class="avatar" width="374" height="276" class="responsive">
             </p>
             <p style="text-align:center;">
                 <b style=font-size:200%;>بطاقة معايدة</b>
             </p>
-            <p style="text-align:center;"><small style=font-size:120%>مبارك عليكم حلول عيد الأضحى المبارك, أعاده الله
+            <p style="text-align:center;"><small style=font-size:120%>مبارك عليكم حلول شهر رمضان المبارك, أعاده الله
                     علينا وعليكم بالخير والبركات</small></p>
-            <p style="text-align:center;"><small style=font-size:100%>يمكنكم الحصول على كرت تهنئة العيد بأسمكم من
+            <p style="text-align:center;"><small style=font-size:100%>يمكنكم الحصول على كرت تهنئة بشهر رمضان بأسمكم من
                     هنا</small></p>
         </div>
 
@@ -100,7 +100,7 @@
         <button onclick="getCard()">عرض التهنئة</button>
     </p>
 
-    <p style="text-align:center;">Made with love : Viemzyy <3</p>
+    <p style="text-align:center;"></p>
 
     <script>
         function getCard() {
