--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             if (name == "" || name == " ") {
                 alert("يجب عليك ادخال اسمك في مربع النص")
             } else {
-                var image_htmlString = '<div><img class="MyImg" src="./design.jpg">' +
+                var image_htmlString = '<div><img class="MyImg" src="./design2.jpg">' +
                     '<h3 style="left:50%;bottom:2%" id=\'name\'>' + name + '</h3></div>';
                 var tempDiv = document.createElement('div');
                 tempDiv.setAttribute("id", "html-content-holder")
