--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         }
 
         h3 {
-            font-family: 'Amiri';
-            font-size: 30px;
+            font-family: 'Cairo';
+            font-size: 50px;
             color: #000000;
             text-align: right;
             position: absolute;
@@ -110,7 +110,7 @@
                 alert("يجب عليك ادخال اسمك في مربع النص")
             } else {
                 var image_htmlString = '<div><img class="MyImg" src="./design2.jpg">' +
-                    '<h3 style="left:50%;bottom:2%" id=\'name\'>' + name + '</h3></div>';
+                    '<h3 style="left:50%;bottom:1%" id=\'name\'>' + name + '</h3></div>';
                 var tempDiv = document.createElement('div');
                 tempDiv.setAttribute("id", "html-content-holder")
                 document.body.appendChild(tempDiv);
