--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <img src="hhrlogo.png" alt="Avatar" class="avatar" width="374" height="276" class="responsive">
             </p>
             <p style="text-align:center;">
-                <b style=font-size:200%;>بطاقة معايدة</b>
+                <b style=font-size:200%;>بطاقة تهنئة</b>
             </p>
             <p style="text-align:center;"><small style=font-size:120%>مبارك عليكم حلول شهر رمضان المبارك, أعاده الله
                     علينا وعليكم بالخير والبركات</small></p>
