--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             var newData = imageData.replace(/^data:image\/png/, "data:application/octet-stream");
                             var tmp = document.createElement('a');
                             tmp.setAttribute('href', newData);
-                            tmp.setAttribute('download', "ramadan_" + name + ".png");
+                            tmp.setAttribute('download', "eid_" + name + ".png");
                             tmp.style.display = 'none';
                             document.body.appendChild(tmp);
                             tmp.click();
