--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <p style="text-align:center;">
                 <b style=font-size:200%;>بطاقة تهنئة</b>
             </p>
-            <p style="text-align:center;"><small style=font-size:120%>نهنئكم بحلول عيد الفطر المبارك ، تقبل الله منا ومنكم صالح الأعمال وكل عام وانتم بخير</small></p>
-            <p style="text-align:center;"><small style=font-size:100%>يمكنكم الحصول على كرت تهنئة عيد الفطر بأسمكم من
+            <p style="text-align:center;"><small style=font-size:120%>نهنئكم بحلول عيد الأضحى المبارك ، تقبل الله منا ومنكم صالح الأعمال وكل عام وانتم بخير</small></p>
+            <p style="text-align:center;"><small style=font-size:100%>يمكنكم الحصول على كرت تهنئة عيد الأضحى بأسمكم من
                     هنا</small></p>
         </div>
 
@@ -108,7 +108,7 @@
             if (name == "" || name == " ") {
                 alert("يجب عليك ادخال اسمك في مربع النص")
             } else {
-                var image_htmlString = '<div><img class="MyImg" src="./eid1.png">' +
+                var image_htmlString = '<div><img class="MyImg" src="./eidadha.png">' +
                     '<h3 style="left:50%;bottom:40%" id=\'name\'>' + name + '</h3></div>';
                 var tempDiv = document.createElement('div');
                 tempDiv.setAttribute("id", "html-content-holder")
