--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             font-family: 'Cairo';
             font-size: 40px;
             color: #FFFFFF;
-            text-align: center;
+            text-align: right;
             position: absolute;
             bottom: 40%;
             left: 50%;
-            transform: translate(-105%, 10%);
+            transform: translate(-98%, 10%);
         }
 
         .MyImg {
