--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             font-family: 'Cairo';
             font-size: 35px;
             color: #FFFFFF;
-            text-align: right;
+            text-align: center;
             position: absolute;
             bottom: 40%;
             left: 50%;
