--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             font-size: 35px;
             color: #FFFFFF;
             text-align: center;
-            position: absolute;
+            position: relative;
             bottom: 40%;
             left: 50%;
             transform: translate(-110%, 5%);
