--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             color: #FFFFFF;
             text-align: center;
             position: relative;
-            bottom: 40%;
-            left: 50%;
+            /*bottom: 40%;
+            left: 50%;*/
             transform: translate(-110%, 5%);
         }
 
