--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alexandria&display=swap" rel="stylesheet">
     <meta property="og:title" content="صمم بطاقة معايدة بإسمك" />
     <meta property="og:type" content="website" />
     <meta property=”og:image” content=”OG.jpg” />
@@ -41,13 +44,13 @@
         }
 
         h3 {
-            font-family: 'Cairo';
+            font-family: 'Alexandria', sans-serif;
             font-size: 35px;
             color: #FFFFFF;
             text-align: center;
             position: relative;
-            /*bottom: 40%;
-            left: 50%;*/
+            bottom: 40%;
+            left: 50%;
             transform: translate(-110%, 5%);
         }
 
