--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             if (name == "" || name == " ") {
                 alert("يجب عليك ادخال اسمك في مربع النص")
             } else {
-                var image_htmlString = '<div><img class="MyImg" src="./eidadha.png">' +
+                var image_htmlString = '<div><img class="MyImg" src="./eidadha2.png">' +
                     '<h3 style="left:50%;bottom:40%" id=\'name\'>' + name + '</h3></div>';
                 var tempDiv = document.createElement('div');
                 tempDiv.setAttribute("id", "html-content-holder")
