--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             font-family: 'Alexandria', sans-serif;
             font-size: 35px;
             color: #FFFFFF;
-            text-align: right;
-            position: absolute;
+            text-align: center;
+            /*position: absolute;*/
             bottom: 40%;
             left: 50%;
             transform: translate(-110%, 5%);
