--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             font-size: 35px;
             color: #FFFFFF;
             text-align: center;
-            /*position: absolute;*/
+            position: absolute;
             bottom: 40%;
             left: 50%;
             transform: translate(-110%, 5%);
