--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             font-family: 'Alexandria', sans-serif;
             font-size: 35px;
             color: #FFFFFF;
-            text-align: center;
+            text-align: left;
             position: absolute;
             bottom: 40%;
             left: 50%;
