--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             position: absolute;
             bottom: 40%;
             left: 50%;
-            transform: translate(-130%, 5%);
+            /*transform: translate(-130%, 5%);*/
         }
 
         .MyImg {
