--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             font-family: 'Alexandria', sans-serif;
             font-size: 30px;
             color: #FFFFFF;
-            text-align: right;
+            text-align:center;
             position: absolute;
             bottom: 40%;
             left: 27%;
