--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             font-size: 30px;
             color: #FFFFFF;
             text-align:center;
-            position: absolute;
+            position: relative;
             bottom: 40%;
             left: 27%;
             /*transform: translate(-130%, 5%);*/
