--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             font-family: 'Alexandria', sans-serif;
             font-size: 30px;
             color: #FFFFFF;
-            /*text-align:center;*/
             position: absolute;
+            text-align:center;
             bottom: 40%;
             left: 27%;
             /*transform: translate(-130%, 5%);*/
