--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         }
 
         h3 {
-            font-family: 'Cairo', sans-serif;
+            font-family: 'Alexandria', sans-serif;
             font-size: 30px;
             color: #FFFFFF;
             position: absolute;
-            text-align:center;
+            text-align:right;
             bottom: 40%;
             left: 27%;
             /*transform: translate(-130%, 5%);*/
