--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             font-size: 30px;
             color: #FFFFFF;
             position: absolute;
-            text-align:justify;
+            /*text-align:justify;*/
             bottom: 40%;
             left: 30%;
             /*transform: translate(-130%, 5%);*/
