--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             font-size: 30px;
             color: #FFFFFF;
             position: absolute;
-            /*text-align:justify;*/
+            text-align:center;
+            letter-spacing:normal;
             bottom: 40%;
             left: 30%;
             /*transform: translate(-130%, 5%);*/
