--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
 
         h3 {
-            font-family: 'Alexandria', sans-serif;
+            font-family: 'Cairo', sans-serif;
             font-size: 30px;
             color: #FFFFFF;
             position: absolute;
