--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 alert("يجب عليك ادخال اسمك في مربع النص")
             } else {
                 var image_htmlString = '<div><img class="MyImg" src="./eidadha3.png">' +
-                    '<h3 style="text-align:right;">' + name + '</h3></div>';
+                    '<h3 style="text-align:center;">' + name + '</h3></div>';
                 var tempDiv = document.createElement('div');
                 tempDiv.setAttribute("id", "html-content-holder")
                 document.body.appendChild(tempDiv);
