--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta property="og:title" content="صمم بطاقة معايدة بإسمك" />
     <meta property="og:type" content="website" />
-    <meta property=”og:image” content=”OG.jpg” />
+    <meta property=”og:image” content=”hhrlogo.png” />
     <meta property="og:description" content="كل عام وانتم بخير" />
     <meta property=”og:url” content=”https://ikatheri.xyz/eid/” />
     <script src="assets/js/jquery.min.js"></script>
