--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>رمضان مبارك</title>
-    <link rel="icon" href="logo white.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="hhrlogo.png" type="image/png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta property="og:title" content="صمم بطاقة معايدة بإسمك" />
     <meta property="og:type" content="website" />
-    <meta property=”og:image” content=”hhrlogo.png” />
+    <meta property=”og:image” content=”OG.jpg” />
     <meta property="og:description" content="كل عام وانتم بخير" />
     <meta property=”og:url” content=”https://ikatheri.xyz/eid/” />
     <script src="assets/js/jquery.min.js"></script>
