--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
         h3 {
             font-family: 'Cairo';
-            font-size: 70px;
+            font-size: 30px;
             color: #FFFFFF;
-            text-align: center;
+            text-align: right;
             position: absolute;
             bottom: 25%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            /*transform: translate(-50%, -50%);*/
         }
 
         .MyImg {
