--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
             color: #FFFFFF;
             text-align: right;
             position: absolute;
-            bottom: 25%;
+            bottom: 50%;
             left: 50%;
+            right:50%
             /*transform: translate(-50%, -50%);*/
         }
 
