--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
         }
 
         h3 {
+            display:block;
+           text-align: center;
+           direction: rtl;
             font-family: 'Cairo';
             font-size: 30px;
             color: #FFFFFF;
-            text-align: right;
             position: absolute;
             bottom: 50%;
             left: 27%;
