--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
         }
 
         h3 {
+            display: block;
            text-align: center;
            direction: rtl;
             font-family: 'Cairo';
             font-size: 30px;
             color: #FFFFFF;
             position: absolute;
-            bottom: 65%;
-            left: 20%;
+            /*bottom: 65%;
+            left: 20%;*/
             
-            /*transform: translate(-50%, -50%);*/
+            transform: translate(-50%, -50%);
         }
 
         .MyImg {
