--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         h3 {
             display: block;
-           text-align: center;
+           text-align: right;
            direction: rtl;
             font-family: 'Cairo';
             font-size: 30px;
