--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 alert("يجب عليك ادخال اسمك في مربع النص")
             } else {
                 var image_htmlString = '<div><img class="MyImg" src="./eidadha3.png">' +
-                    '<h3 style="left:427px;bottom:598px" id=\'name\'>' + name + '</h3></div>';
+                    '<h3 style="left:427px;top:598px" id=\'name\'>' + name + '</h3></div>';
                 var tempDiv = document.createElement('div');
                 tempDiv.setAttribute("id", "html-content-holder")
                 document.body.appendChild(tempDiv);
