--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             /*bottom: 70%;
             left: 50%;*/
             
-            transform: translate(-50%, -50%);
+            /*transform: translate(-50%, -50%);*/
         }
 
         .MyImg {
