--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/mine.css?v=1">
     <meta property="og:title" content="صمم بطاقة معايدة بإسمك" />
     <meta property="og:type" content="website" />
     <meta property=”og:image” content=”OG.jpg” />
@@ -19,61 +20,7 @@
 
     <script src="https://github.com/niklasvh/html2canvas/releases/download/0.4.1/html2canvas.js"></script>
 
-    <style>
-        button {
-            font-family: 'Cairo', sans-serif;
-            border-radius: 7px;
-            color: black;
-        }
-
-        input {
-            font-family: 'Cairo', sans-serif;
-            font-size: 10px;
-            text-align: right;
-        }
-
-        body {
-            background-image: url('BG.jpg');
-            background-color: #ffffff;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: 100% 100%;
-            font-family: 'Cairo', sans-serif;
-            color: white;
-        }
-
-        h3 {
-            display: block;
-           text-align: justify;
-           direction: rtl;
-            font-family: 'Cairo';
-            font-size: 30px;
-            color: #FFFFFF;
-            position: absolute;
-            /*bottom: 70%;
-            left: 50%;*/
-            
-            /*transform: translate(-50%, -50%);*/
-        }
-
-        .MyImg {
-            width: 1080px;
-            display: block;
-        }
-
-        #html-content-holder {
-            position: relative;
-            display: inline-block;
-        }
-
-        .temp {
-            color: #e9c771;
-        }
-
-        p{
-          color: #123e53;
-        }
-    </style>
+   
     <meta charset="utf-8">
     <title>عيد أضحى مبارك</title>
 
