--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>رمضان مبارك</title>
-    <link rel="icon" href="logo white.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="hhrlogo.png" type="image/png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,12 +42,12 @@
 
         h3 {
             font-family: 'Cairo';
-            font-size: 70px;
+            font-size: 30px;
             color: #FFFFFF;
             text-align: right;
             position: absolute;
-            bottom: 25%;
-            left: 50%;
+            /*bottom: 25%;
+            left: 50%;*/
             transform: translate(-50%, -50%);
         }
 
