--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		<button id="button" onclick="getCard2()"  >مقاس مربع</button>
     </p>
 
-    
+    <p style="text-align:center;"><small style=font-size:100%>اخوكم / عمر العامودي - قسم التسويق</small></p>
 
     <script>
 
