--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </p>
 
     <p style="text-align:center;"><small style=font-size:100%>اخوكم / عمر احمد العامودي</small></p>
-<p style="text-align:center;"><small style=font-size:100%>رينفي - قسم التسويق</small></p>
+<p style="text-align:center;"><small style=font-size:100%>قسم التسويق</small></p>
     <script>
 
 	
