--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 		<button id="button" onclick="getCard2()"  >مقاس مربع</button>
     </p>
 
-    <p style="text-align:center;"><small style=font-size:100%>اخوكم / عمر احمد العامودي</small></p>
-<p style="text-align:center;"><small style=font-size:100%>قسم التسويق</small></p>
+    <p style="text-align:center;"><small style=font-size:100%></small></p>
+<p style="text-align:center;"><small style=font-size:100%></small></p>
     <script>
 
 	
