--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 alert("يجب عليك ادخال اسمك في مربع النص")
             } else {
 			
-                var image_htmlString = '<div><img class="MyImg" src="./eidstory.png">' +
-                    '<h3 style="left:560px;top:1050px" id=\'name\'>' + name + '</h3></div>' + '<h3 class="second" style="left:560px;top:1045px" id=\'name\'>' + name + '</h3></div>';
+                var image_htmlString = '<div><img class="MyImg" src="./EidAdha1445.png">' +
+                    '<h3 style="left:560px;top:700px" id=\'name\'>' + name + '</h3></div>' + '<h3 class="second" style="left:560px;top:1045px" id=\'name\'>' + name + '</h3></div>';
                 var tempDiv = document.createElement('div');
                 tempDiv.setAttribute("id", "html-content-holder")
                 document.body.appendChild(tempDiv);
