--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <title>عيد فطر سعيد</title>
+    <title>عيد أضحى سعيد</title>
     <link rel="icon" href="hhrlogo.png" type="image/png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
@@ -43,7 +43,7 @@
         h3 {
             font-family: 'Cairo';
             font-size: 50px;
-            color: #8f724e;
+            color: #000000;
             text-align: right;
             position: absolute;
             /*bottom: 25%;
@@ -97,9 +97,9 @@
             <p style="text-align:center;">
                 <b style=font-size:200%;>بطاقة معايدة</b>
             </p>
-            <p style="text-align:center;"><small style=font-size:120%>مبارك عليكم حلول عيد الفطر المبارك, أعاده الله
+            <p style="text-align:center;"><small style=font-size:120%>مبارك عليكم حلول عيد الأضحى المبارك, أعاده الله
                     علينا وعليكم بالخير والبركات</small></p>
-            <p style="text-align:center;"><small style=font-size:100%>يمكنكم الحصول على كرت تهنئة عيد الفطر بإسمكم من هنا</small></p>
+            <p style="text-align:center;"><small style=font-size:100%>يمكنكم الحصول على كرت تهنئة عيد الأضحى بإسمكم من هنا</small></p>
 			
 			<p style="text-align:center;"><small style=font-size:100%>ملاحظة : يوجد مقاسين للتهنئة ، بعد كتابة الاسم اضغط على الزر للمقاس المراد
 			</small></p>
@@ -135,8 +135,8 @@
                 alert("يجب عليك ادخال اسمك في مربع النص")
             } else {
 			
-                var image_htmlString = '<div><img class="MyImg" src="./EidAdha1445.png">' +
-                    '<h3 style="left:560px;top:700px" id=\'name\'>' + name + '</h3></div>' + '<h3 class="second" style="left:560px;top:1045px" id=\'name\'>' + name + '</h3></div>';
+                var image_htmlString = '<div><img class="MyImg" src="./EidAdha1445story.png">' +
+                    '<h3 style="left:550px;top:1100px" id=\'name\'>' + name + '</h3></div>' + '<h3 class="second" style="left:550px;top:1098px" id=\'name\'>' + name + '</h3></div>';
                 var tempDiv = document.createElement('div');
                 tempDiv.setAttribute("id", "html-content-holder")
                 document.body.appendChild(tempDiv);
@@ -172,8 +172,8 @@
                 alert("يجب عليك ادخال اسمك في مربع النص")
             } else {
 			
-                var image_htmlString = '<div><img class="MyImg" src="./eidsquare.png">' +
-                    '<h3 style="left:540px;top:660px;font-size:40px" id=\'name\'>' + name + '</h3></div>' + '<h3 class="second" style="left:540px;top:658px;font-size:40px" id=\'name\'>' + name + '</h3></div>';
+                var image_htmlString = '<div><img class="MyImg" src="./EidAdha1445.png">' +
+                    '<h3 style="left:540px;top:600px;font-size:32px" id=\'name\'>' + name + '</h3></div>' + '<h3 class="second" style="left:540px;top:598px;font-size:32px" id=\'name\'>' + name + '</h3></div>';
                 var tempDiv = document.createElement('div');
                 tempDiv.setAttribute("id", "html-content-holder")
                 document.body.appendChild(tempDiv);
